# cite-xml-invoice-converter

./: .gitignore  README.md  pyproject.toml
docs/: design.md  limitations.md  prompt-log.md
src/cite_invoice/: __init__.py  __main__.py  converter.py  engine.py  models.py  parser.py  reader.py  validator.py  xml_tree.py
src/cite_invoice/web/: app.js  index.html  styles.css
tests/: test_engine.py
tests/fixtures/: example-invoice-2.cite.xml  sample-invoice.cite.xml  sample-invoice.expected.json
