[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cite-invoice-converter"
version = "0.1.0"
description = "Barebones CITE XML invoice validator and JSON converter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cite-invoice = "cite_invoice.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
